Add comprehensive memory bank documentation
- Include all memory bank files for project documentation
- Update .gitignore to include memory-bank directory
- Document complete project status and GitHub integration
- Provide comprehensive project context and technical details
- Include system patterns and architecture documentation

--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Memory Bank (keep local documentation)
-memory-bank/
+# Memory Bank (now included in repository for project documentation)
+# memory-bank/
